# hrs

./: .clang-format  CMakeLists.txt  client.html  readme.md  vcpkg.json
client/: CMakeLists.txt  hrs_client.cpp
server/: CMakeLists.txt  hrs_server.cpp
server/hrs/: core.cpp  core.hpp
server/hrs/calculation/: calculate.cpp  calculate.hpp
server/utils/: http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  server.cpp  server.h  session.cpp  session.h  websocket_session.cpp  websocket_session.hpp
src/: main.cpp
